--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -5,10 +5,7 @@
       <a href="{{ "/index" | relative_url }}">Introduction</a>
     </li>
     <li>
-      <a href="{{ "/quantum_espresso.html" | relative_url }}">Plan</a>
-    </li>
-    <li>
-      <a href="{{ "/chapter2" | relative_url }}">Chapter</a>
+      <a href="{{ "/bisection" | relative_url }}">Root: Bisection Method</a>
     </li>
   </ul>
 </nav>
