--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -5,7 +5,7 @@
       <a href="{{ "/index" | relative_url }}">Introduction</a>
     </li>
     <li>
-      <a href="{{ "/bisection" | relative_url }}">Root: Bisection Method</a>
+      <a href="{{ "/bisection.html" | relative_url }}">Root: Bisection Method</a>
     </li>
   </ul>
 </nav>
