--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -33,3 +33,8 @@ pre {
   overflow: auto;
 }
 
+/* Syntax highlighting styles */
+.highlight .kd, .highlight .kd .nx { color: #990055; }
+.highlight .kt { color: #007700; }
+.highlight .s { color: #dd1144; }
+.highlight .c, .highlight .cm { color: #999988; font-style: italic; }
