--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -4,7 +4,36 @@
     <li>
       <a href="{{ "/index" | relative_url }}">Introduction</a>
     </li>
+
     <li>
+      <a href="{{ "/roots.html" | relative_url }}">Finding Root of equations</a>
+      <ul>
+        <li>
+          <a href="{{ "/roots/bisection.html" | relative_url }}">Bisection Method</a>
+        <li>
+      </ul>
+    </li>
+
+
+
+
+
+
+    
+    <li>
+      <a href="{{ "/bisection.html" | relative_url }}">Root: Bisection Method</a>
+    </li>
+    
+    
+    <li>
+      <a href="{{ "/newton.html" | relative_url }}">Root: Newton's Method</a>
+    </li>
+
+      <li>
+      <a href="{{ "/bisection.html" | relative_url }}">Root: Euler's Method</a>
+    </li>
+
+      <li>
       <a href="{{ "/bisection.html" | relative_url }}">Root: Bisection Method</a>
     </li>
   </ul>
