--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -25,6 +25,22 @@
   margin-left: 20px;
 }
 
+.nested {
+  display: none;
+}
+.toc-toggle {
+  background: none;
+  border: none;
+  color: #0366d6;
+  cursor: pointer;
+  font-size: 1em;
+  text-align: left;
+  padding: 0;
+}
+.toc-toggle:focus {
+  outline: none;
+}
+
 code {
   background-color: #f5f5f5;
   padding: 2px 4px;
