--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -11,31 +11,34 @@
         <li>
           <a href="{{ "/roots/bisection.html" | relative_url }}">Bisection Method</a>
         <li>
+        <li>
+          <a href="{{ "/roots/newton.html" | relative_url }}">Newton Raphson Method</a>
+        <li>
+      </ul>
+    </li>
+
+    <li>
+      <a href="{{ "/diff_eqn.html" | relative_url }}">Solution of Differential Equations</a>
+      <ul>
+        <li>
+          <a href="{{ "/roots/euler.html" | relative_url }}">Euler's Method</a>
+        <li>
+        <li>
+          <a href="{{ "/roots/simson.html" | relative_url }}">Simson's One third Rule</a>
+        <li>
+        <li>
+          <a href="{{ "/roots/rk_second.html" | relative_url }}">Runge Kutta Method: Second Order</a>
+        <li>
+
+        <li>
+          <a href="{{ "/roots/rk_fourth.html" | relative_url }}">Runge Kutta Method: Second Order</a>
+        <li>
       </ul>
     </li>
 
 
 
-
-
-
     
-    <li>
-      <a href="{{ "/bisection.html" | relative_url }}">Root: Bisection Method</a>
-    </li>
-    
-    
-    <li>
-      <a href="{{ "/newton.html" | relative_url }}">Root: Newton's Method</a>
-    </li>
-
-      <li>
-      <a href="{{ "/bisection.html" | relative_url }}">Root: Euler's Method</a>
-    </li>
-
-      <li>
-      <a href="{{ "/bisection.html" | relative_url }}">Root: Bisection Method</a>
-    </li>
   </ul>
 </nav>
 
