--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -18,27 +18,43 @@
     </li>
 
     <li>
-      <a href="{{ "/diff_eqn.html" | relative_url }}">Solution of Differential Equations</a>
+      <a href="{{ "/diff_eqn/diff_eqn.html" | relative_url }}">Solution of Differential Equations</a>
       <ul>
         <li>
-          <a href="{{ "/roots/euler.html" | relative_url }}">Euler's Method</a>
+          <a href="{{ "/diff_eqn/euler.html" | relative_url }}">Euler's Method</a>
         <li>
         <li>
-          <a href="{{ "/roots/simson.html" | relative_url }}">Simson's One third Rule</a>
+          <a href="{{ "/diff_eqn/simson.html" | relative_url }}">Simson's One third Rule</a>
         <li>
         <li>
-          <a href="{{ "/roots/rk_second.html" | relative_url }}">Runge Kutta Method: Second Order</a>
+          <a href="{{ "/diff_eqn/rk_second.html" | relative_url }}">Runge Kutta Method: Second Order</a>
         <li>
 
         <li>
-          <a href="{{ "/roots/rk_fourth.html" | relative_url }}">Runge Kutta Method: Second Order</a>
+          <a href="{{ "/diff_eqn/rk_fourth.html" | relative_url }}">Runge Kutta Method: Second Order</a>
         <li>
       </ul>
     </li>
 
 
+    <li>
+      <a href="{{ "/integration.html" | relative_url }}">Integration</a>
+      <ul>
+        <li>
+          <a href="{{ "/integration/trapezoidal.html" | relative_url }}">Trapezoidal Rule</a>
+        <li>
+        <li>
+          <a href="{{ "/integration/monte_carlo.html" | relative_url }}">Montecarlo Inegration</a>
+        <li>
+        <li>
+          <a href="{{ "/integration/monte_carlo2D.html" | relative_url }}">Montecarlo Inegration: 2D</a>
+        <li>
+      </ul>
+    </li>
 
-    
+    <li>
+      <a href="{{ "/lagrange_intrp/lagrange_intrp.html" | relative_url }}">Lagrange Interpolation</a>
+    </li>   
   </ul>
 </nav>
 
