--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,6 +6,8 @@
   <title>{{ page.title }} - {{ site.title }}</title>
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script src="{{ "https://polyfill.io/v3/polyfill.min.js?features=es6" }}"></script>
   <script src="{{ "/assets/js/toc.js" | relative_url }}" defer></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
