--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -31,7 +31,7 @@
         <li>
 
         <li>
-          <a href="{{ "/diff_eqn/rk_fourth.html" | relative_url }}">Runge Kutta Method: Second Order</a>
+          <a href="{{ "/diff_eqn/rk_fourth.html" | relative_url }}">Runge Kutta Method: Fourth Order</a>
         <li>
       </ul>
     </li>
