--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -54,7 +54,16 @@
 
     <li>
       <a href="{{ "/lagrange_intrp/lagrange_intrp.html" | relative_url }}">Lagrange Interpolation</a>
-    </li>   
+    </li>
+
+    <li>
+      <a href="{{ "/simulations/pi.html" | relative_url }}">Some Simulations</a>
+      <ul>
+        <li>
+          <a href="{{ "/simulations/pi.html" | relative_url }}">Estimating Pi With MC</a>
+        <li>
+      </ul>
+    </li>
   </ul>
 </nav>
 
