--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -6,7 +6,7 @@
     </li>
 
     <li>
-      <a href="{{ "/roots/roots.html" | relative_url }}">Finding Root of equations</a>
+      <a href="{{ "/functions/functions.html" | relative_url }}">Functions</a>
       <ul>
         <li>
           <a href="{{ "/roots/bisection.html" | relative_url }}">Bisection Method</a>
