--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -2,7 +2,10 @@
   <h2>Contents</h2>
   <ul>
     <li>
-      <a href="{{ "/index" | relative_url }}">Introduction</a>
+      <a href="{{ "/linux/basic_commands.html" | relative_url }}">Basic Commands of Linux</a>
+    </li>
+    <li>
+      <a href="{{ "/index" | relative_url }}">Introduction of Bash</a>
     </li>
 
     <li>
