--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -6,6 +6,11 @@
     </li>
     <li>
       <a href="{{ "/index" | relative_url }}">Introduction of Bash</a>
+      <ul>
+        <li>
+          <a href="{{ "/basics/shell_scripts_and_variables.html" | relative_url }}">Editing Scripts and Variables</a>
+        <li>
+      </ul>
     </li>
 
     <li>
