--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -10,6 +10,9 @@
         <li>
           <a href="{{ "/basics/shell_scripts_and_variables.html" | relative_url }}">Editing Scripts and Variables</a>
         <li>
+        <li>
+          <a href="{{ "/functions/functions.html" | relative_url }}">Functions</a>
+        <li>
       </ul>
     </li>
 
