--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -11,6 +11,9 @@
           <a href="{{ "/basics/shell_scripts_and_variables.html" | relative_url }}">Editing Scripts and Variables</a>
         <li>
         <li>
+          <a href="{{ "/basics/exit_code.html" | relative_url }}">Exit Status</a>
+        <li>
+        <li>
           <a href="{{ "/functions/functions.html" | relative_url }}">Functions</a>
         <li>
       </ul>
