--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -13,6 +13,9 @@
         <li>
           <a href="{{ "/basics/exit_code.html" | relative_url }}">Exit Status</a>
         <li>
+          <li>
+          <a href="{{ "/basics/command_substitution.html" | relative_url }}">Command Substitution</a>
+        <li>
         <li>
           <a href="{{ "/functions/functions.html" | relative_url }}">Functions</a>
         <li>
